--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "setting up an HTTP server and routes with tests.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
