added start script to server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "setting up an HTTP server and routes with tests.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --coverage"
+    "test": "jest --verbose --coverage",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
